[gd_scene load_steps=7 format=3 uid="uid://cjja0oj0j46qx"]

[ext_resource type="PackedScene" uid="uid://k5lrmfm12237" path="res://scenes/actors/Actor.tscn" id="1_uvhjo"]
[ext_resource type="Script" path="res://scripts/actors/player/Player.gd" id="2_ehrxk"]
[ext_resource type="Script" path="res://scripts/actors/player/WeaponSystem.gd" id="3_74jok"]
[ext_resource type="Script" path="res://scripts/actors/player/PlayerMovement.gd" id="4_ca1r7"]
[ext_resource type="Script" path="res://scripts/actors/player/BlinkSystem.gd" id="4_erngv"]

[sub_resource type="CanvasTexture" id="CanvasTexture_bq0gt"]

[node name="Player" instance=ExtResource("1_uvhjo")]
position = Vector2(1, -5)
script = ExtResource("2_ehrxk")

[node name="Sprite" parent="." index="0"]
scale = Vector2(12, 14.1352)
texture = SubResource("CanvasTexture_bq0gt")

[node name="Camera2D" type="Camera2D" parent="." index="2"]

[node name="WeaponSystem" type="Node2D" parent="." index="3"]
script = ExtResource("3_74jok")

[node name="Weapon0" type="Node2D" parent="WeaponSystem" index="0"]
position = Vector2(10, 6)

[node name="Weapon1" type="Node2D" parent="WeaponSystem" index="1"]
position = Vector2(-12, 6)

[node name="Weapon2" type="Node2D" parent="WeaponSystem" index="2"]
position = Vector2(10, -1)

[node name="Weapon3" type="Node2D" parent="WeaponSystem" index="3"]
position = Vector2(-12, 0)

[node name="Weapon4" type="Node2D" parent="WeaponSystem" index="4"]
position = Vector2(-12, -7)

[node name="Weapon5" type="Node2D" parent="WeaponSystem" index="5"]
position = Vector2(11, -7)

[node name="BlinkSystem" type="Node2D" parent="." index="4"]
script = ExtResource("4_erngv")

[node name="PlayerMovement" type="Node2D" parent="." index="5"]
script = ExtResource("4_ca1r7")
